[package]
name = "utxo"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["accessibility", "algorithms", "cryptography::cryptocurrencies"]
description = "General utilities of UTxO to ease the development of Cryptocurrencies based on UTxO model."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
